# dejavu

./: .env.example  README.md  demo.py  pyproject.toml
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: chat.baml  clients.baml
dejavu/: __init__.py  cli.py  contract.py  conversation.py  metrics.py  pricing.py  resilience.py  runner.py  tui.py
dejavu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dejavu/data/: contract.txt  questions.json
tests/: conftest.py  test_clients_baml.py  test_cycle2_contract.py  test_cycle2_package_scaffold.py  test_cycle3_metrics.py  test_cycle3_pricing.py  test_cycle4_registry.py  test_cycle4_runner.py  test_cycle5_packaging.py  test_cycle5_runner.py  test_cycle6_runner.py  test_cycle7_tui_state.py  test_issue16_tui_renderer.py  test_issue17_cli.py  test_issue18_readme.py  test_issue18_smoke.py  test_issue2_chat_baml.py  test_issue3_baml_client_regen.py  test_issue6_load_questions.py  test_resilient_session.py
