[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dejavu"
version = "0.1.0"
description = "Prompt caching cost simulator CLI for Anthropic"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["baml_client*"]

[tool.ruff]
exclude = ["baml_client/"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pyright]
exclude = ["baml_client/"]
venvPath = "."
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
