[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dejavu"
version = "0.1.0"
description = "Prompt caching cost simulator CLI for Anthropic"
requires-python = ">=3.11"
dependencies = [
    "baml-py>=0.87",
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6",
]

[project.scripts]
dejavu = "dejavu.cli:app"

[tool.setuptools.packages.find]
include = ["baml_client*", "dejavu*"]

[tool.setuptools.package-data]
dejavu = ["data/*.txt", "data/*.json"]

[tool.ruff]
exclude = ["baml_client/"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# Descriptive BDD test names (test_when_..._then_...) and assert messages
# routinely exceed the line limit; readability beats wrapping in test code.
"tests/*" = ["E501"]

[tool.pyright]
exclude = ["baml_client/"]
venvPath = "."
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: live tests that hit the real Anthropic API (require ANTHROPIC_API_KEY)",
]
